--- a/sample/index.html
+++ b/sample/index.html
@@ -10,6 +10,9 @@
 			margin: 20px auto;
 		}
 	</style>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+	 crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -32,7 +35,9 @@
 		</p>
 	</div>
 
-	<script src="../build/ckeditor.js"></script>
+	<script src="../build/ckeditor.js">
+	</script>
+
 </body>
 
 </html>
