define getData method

--- a/sample/index.html
+++ b/sample/index.html
@@ -30,14 +30,13 @@
 		</figure>
 
 		<p>You can use this sample to validate whether your
-			<a href="https://docs.ckeditor.com/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works
+			<a href="https://docs.ckeditor.com/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a>
+			works
 			fine.
 		</p>
 	</div>
 
-	<script src="../build/ckeditor.js">
-	</script>
-
+	<script src="../build/ckeditor.js"></script>
 </body>
 
 </html>
